--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -68,6 +68,7 @@ footer {
 @media screen and (max-width: 800px) {
     .left-box {
         position: fixed;
+        background-color: transparent;
         width: calc(100% - 40px);
         height: 150px;
     }
