--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -11,36 +11,135 @@ canvas {
   position: relative;
   display: block;
   border: none;
-}
+} 
 
 .left-box {
+    display: block;
+    box-sizing: border-box;
+    overflow: hidden;
     position: absolute; 
-    background: transparent; 
+    /* background: transparent; */
+    background-color: rgba(255, 255, 255, 0.85);
+    border-radius: 20px;
     width: 150px; 
-    height: 500px;
+    height: 60px;
     top: 20px;
     left: 20px;
     z-index: 1;
+    box-shadow: 0 8px 22px rgba(0, 0, 0, 0.15);
+    transition: 1.3s cubic-bezier(0.53, 0, 0.15, 1.3);
+}
+.left-box.expanded {
+    height: 300px;
 }
 .topName {
     font-family: Helvetica, sans-serif; 
     font-size: 15px;
-    font-weight: 400;
-    margin-left: 20px;
+    font-weight: bold;
+    margin-left: 55px;
     margin-top: 20px;
 }
+.toggle {
+    position: relative;
+    height: 42.75px;
+    width: 58.5px;
+    cursor: pointer;
+  }
+.toggle:after, .toggle:before {
+    content: "";
+    background: black;
+    width: 25px;
+    height: 4.5px;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    transition: 1.3s cubic-bezier(0.53, 0, 0.15, 1.3);
+  }
+.toggle:before {
+    top: -30%;
+  }
+.toggle:after {
+    top: 30%;
+  }
+.toggle.close:before {
+    transform: rotate(-225deg);
+    top: 0;
+  }
+.toggle.close:after {
+    transform: rotate(225deg);
+    top: 0;
+  }
+
 .middleMenu {
+    position: absolute;
+    top: calc(100% - 52px);
+    right: 120px;
+    height: 30px;
+    width: 30px;
+    transition: 0.1s;
     font-family: Helvetica, sans-serif; 
-    font-size: 13px; 
-    font-weight: 200; 
-    margin-left: 20px;
+    font-size: 18px; 
+    font-weight: 200;
+  }
+  .middleMenu.close {
+    bottom: 0;
 }
+span {
+    position: relative;
+    bottom: 150px;
+    left: 20px;
+    white-space: nowrap;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.3s;
+    transform: rotateY(0deg);
+  }
+  /* span:nth-of-type(4) {
+    transition-delay: 0.4s;
+  }
+  span:nth-of-type(3) {
+    transition-delay: 0.5s;
+  }
+  span:nth-of-type(2) {
+    transition-delay: 0.6s;
+  }
+  span:nth-of-type(1) {
+    transition-delay: 0.7s;
+  } */
+  span.hidden {
+    width: 0;
+    visibility: hidden;
+    opacity: 0;
+    transform: rotateY(90deg);
+  }
+  
+  span.hidden:nth-of-type(5) {
+    transition-delay: 0.4s;
+  }
+  span.hidden:nth-of-type(4) {
+    transition-delay: 0.3s;
+  }
+  span.hidden:nth-of-type(3) {
+    transition-delay: 0.2s;
+  }
+  span.hidden:nth-of-type(2) {
+    transition-delay: 0.1s;
+  }
+  span.hidden:nth-of-type(1) {
+    transition-delay: 0s;
+  }
+
 .insta_logo {
     width: 10px;
 }
 .right-box {
     position: absolute;
-    background: transparent; 
+    background: transparent;
+    background-color: rgba(255, 255, 255, 0.85);
+    border-radius: 20px;
     width: calc(100% - 210px);
     height: calc(100% - 50px);
     top: 20px;
@@ -48,12 +147,7 @@ canvas {
     z-index: 1;
 }
 .changecolor {transition: color 0.2s ease;}
-#Menu {
-    list-style: none;
-    padding: 0;
-}
-
-#Menu li a {
+#Menu span a {
     text-decoration: none;
     color: inherit;
 }
@@ -84,22 +178,57 @@ footer {
 @media screen and (max-width: 800px) {
     .left-box {
         position: fixed;
-        background-color: transparent;
+        /* background-color: transparent; */
+        background-color: rgba(255, 255, 255, 0.85);
         width: calc(100% - 40px);
-        height: 150px;
+        height: 60px;
     }
-    
-    .middleMenu {
-        font-family: Helvetica, sans-serif; 
-        font-size: 25px; 
-        font-weight: 400;
+    .left-box.expanded {
+        height: 120px;
+    }
+    .topName {
         margin-left: 20px;
     }
-
-    .insta_logo {
-        width: 20px;
+    .middleMenu {
+        position: absolute;
+        right: 40px;
+        height: 30px;
+        width: 30px;
+        transition: 0.1s;
+        font-family: Helvetica, sans-serif; 
+        font-size: 18px; 
+        font-weight: 200;
+      }
+      .middleMenu.close {
+        bottom: 0;
     }
-
+    span {
+        position: relative;
+        bottom: 20px;
+        white-space: nowrap;
+        visibility: visible;
+        opacity: 1;
+        transition: 0.3s;
+        transform: rotateY(0deg);
+      }
+    .insta_logo {
+        width: 15px;
+    }
+      span.hidden:nth-of-type(5) {
+        transition-delay: 0s;
+      }
+      span.hidden:nth-of-type(4) {
+        transition-delay: 0s;
+      }
+      span.hidden:nth-of-type(3) {
+        transition-delay: 0s;
+      }
+      span.hidden:nth-of-type(2) {
+        transition-delay: 0s;
+      }
+      span.hidden:nth-of-type(1) {
+        transition-delay: 0s;
+      }
     footer {
         position: fixed;
         Margin-top: 5px;
@@ -113,7 +242,7 @@ footer {
         padding-right: 20px;
     }
     
-    #Menu li {
+    #Menu span {
         margin: 0;
         padding-right: 5px;
         padding-left: 0;
@@ -121,10 +250,10 @@ footer {
     
     .right-box {
         position: fixed;
-        margin-top: 170px;
+        margin-top: 140px;
         left: 20px;
         Width: calc(100% - 40px);
-        height: calc(100% - 230px);
+        height: calc(100% - 200px);
     }
     #instaLink {
         position: flexible;
