--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -140,6 +140,7 @@ span {
     background: transparent;
     background-color: rgba(255, 255, 255, 0.85);
     border-radius: 20px;
+    overflow: hidden;
     width: calc(100% - 210px);
     height: calc(100% - 50px);
     top: 20px;
@@ -202,7 +203,11 @@ footer {
       .middleMenu.close {
         bottom: 0;
     }
-    span {
+    .insta_logo {
+        width: 15px;
+    }
+
+      span {
         position: relative;
         bottom: 20px;
         white-space: nowrap;
@@ -211,24 +216,29 @@ footer {
         transition: 0.3s;
         transform: rotateY(0deg);
       }
-    .insta_logo {
-        width: 15px;
-    }
-      span.hidden:nth-of-type(5) {
-        transition-delay: 0s;
+      span.hidden {
+      width: 0;
+      visibility: hidden;
+      opacity: 0;
+      transform: rotateY(90deg);
       }
-      span.hidden:nth-of-type(4) {
-        transition-delay: 0s;
-      }
-      span.hidden:nth-of-type(3) {
-        transition-delay: 0s;
+  
+      span.hidden:nth-of-type(1) {
+      transition-delay: 0s;
       }
       span.hidden:nth-of-type(2) {
-        transition-delay: 0s;
+      transition-delay: 0s;
       }
-      span.hidden:nth-of-type(1) {
-        transition-delay: 0s;
+      span.hidden:nth-of-type(3) {
+      transition-delay: 0s;
       }
+      span.hidden:nth-of-type(4) {
+      transition-delay: 0s;
+      }
+      span.hidden:nth-of-type(5) {
+      transition-delay: 0s;
+     }
+
     footer {
         position: fixed;
         Margin-top: 5px;
@@ -244,7 +254,7 @@ footer {
     
     #Menu span {
         margin: 0;
-        padding-right: 5px;
+        padding-right: 10px;
         padding-left: 0;
     }
     
