--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -336,13 +336,20 @@ body {
       z-index: 2;
     }
     .pull {
+      visibility: visible;
+      opacity: 0.1;
       left: -190px;
       margin-left: calc(100% + 30px);
-      bottom: 85px;
+      bottom: 50px;
+      transform: scale(0.8);
     }
     .pull:after {
+      visibility: hidden;
       transform: rotateY(180deg);
-      
+    }
+    .pull:hover {
+      visibility: visible;
+      opacity: 1;
     }
 
     #Menu {
