--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -138,6 +138,7 @@ span {
     top: 20px;
     left: 190px;
     z-index: 1;
+    visibility: hidden;
 }
 .changecolor {transition: color 0.2s ease;}
 #Menu span a {
